--- a/topografiya/templates/leader/show_worker.html
+++ b/topografiya/templates/leader/show_worker.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block title %} Сотрудники {% endblock %}
-
+{% load i18n %}
 {% block content%}
 
 {% block stylecontent %}
@@ -15,10 +15,10 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Ходим</h3>
+                            <h3> {% trans "Сотрудники" %}</h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'workers' %}">Сотрудники</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i> {% trans "Сотрудники" %}</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'workers' %}"></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'show_worker' id=worker.id %}">{{ worker.full_name }}</a></li>
                             </ol>
                         </div>
@@ -37,7 +37,7 @@
                             <form class="" >
 
                                 <div class="form-group">
-                                  <label>Сотрудник</label>
+                                  <label>{% trans "Сотрудник" %}</label>
                                   <div class="small-group">
                                     <div class="input-group"><span class="input-group-text"><i class="icon-user"></i></span>
                                       <input class="form-control" type="text" id="fio" name="fio" required="" value="{{ worker.full_name }}">
@@ -46,7 +46,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                  <label>Номер телефона</label>
+                                  <label>{% trans "Номер телефона" %}</label>
                                   <div class="small-group">
                                     <div class="input-group"><span class="input-group-text"><i class="fa fa-mobile"></i></span>
                                       <input class="form-control" type="number" id="contact" name="contact" required="" value="{{ worker.contact }}">
@@ -54,14 +54,14 @@
                                   </div>
                                 </div>
                                 <div class="form-group">
-                                  <label>Адресс электронной почты</label>
+                                  <label>{% trans "Адресс электронной почты" %}</label>
                                   <div class="input-group"><span class="input-group-text"><i class="icon-email"></i></span>
                                     <input class="form-control" type="email" required="" id="email" name="email" value="{{ worker.email }}">
                                   </div>
                                 </div>
 
                                  <div class="form-group">
-                                  <label>Должность</label>
+                                  <label>{% trans "Должность" %}</label>
                                   <div class="input-group"><span class="input-group-text"><i class="fa fa-user"></i></span>
                                     <input class="form-control" type="text" required="" id="position" name="position" value="{{ worker.position }}">
                                   </div>
@@ -69,7 +69,7 @@
 
 
                               <div class="form-group">
-                                  <label>Отдел</label>
+                                  <label>{% trans "Отдел" %}</label>
                                   <div class="input-group"><span class="input-group-text"><i class="fa fa-group"></i></span>
                                   <input class="form-control" type="email" required="" id="email" name="email" value="{{ worker.department.name }}">
 {#                                     <select required class="form-control" id="department" name="department">#}
@@ -84,7 +84,7 @@
 
 
                              <div class="form-group">
-                                  <label>Статуси</label>
+                                  <label>{% trans "Статус" %}</label>
                                   <div class="input-group"><span class="input-group-text">
                                       {% if worker.live == '1' %}
                                         <i class="fa fa-check"></i>
@@ -93,8 +93,8 @@
                                       {% endif %}
                                   </span>
                                      <select required class="form-control" id="status" name="status">
-                                             <option value="0" {% if worker.live == '1' %} selected {% endif %}> Активный </option>
-                                             <option value="1" {% if worker.live == '0' %} selected {% endif %}> Неактивный </option>
+                                             <option value="0" {% if worker.live == '1' %} selected {% endif %}> {% trans "Активный" %} </option>
+                                             <option value="1" {% if worker.live == '0' %} selected {% endif %}> {% trans "Неактивный" %} </option>
                                      </select>
                                   </div>
                                 </div>
@@ -103,11 +103,11 @@
                                 <div class="form-group ">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <button class="btn btn-danger w-100  btn-block" type="button" id="reject_worker"> <i class="fa fa-close"></i> Отказ</button>
+                                            <button class="btn btn-danger w-100  btn-block" type="button" id="reject_worker"> <i class="fa fa-close"></i> {% trans "Отказ" %}</button>
                                         </div>
 
                                         <div class="col-md-6">
-                                            <button class="btn btn-primary w-100  btn-block" type="button" id="confirm_worker"><i class="fa fa-check"></i> Разрешить</button>
+                                            <button class="btn btn-primary w-100  btn-block" type="button" id="confirm_worker"><i class="fa fa-check"></i> {% trans "Разрешить" %} </button>
                                         </div>
                                     </div>
 
